tests/models/enum/named/i128/fail/min_items.stderr
error: Support condition is gt, ge, lt, le, alias, default and validate
 --> tests/models/enum/named/i128/fail/min_items.rs:6:9
  |
6 |         value: i128
  |         ^^^^^
